# RapidSegment

./: .gitignore  Decision_Tree_vs_SegmentIQ.ipynb  Experiment.ipynb  Health_Check_Basic.ipynb  Health_Check_Extended.ipynb  Health_Check_Extended1.ipynb  Health_Check_Extended2.ipynb  Health_Check_Kaggle.ipynb  README.md  README_v2.md  SSB.py  SSB_V1_Test.ipynb  SSB_V2.ipynb  SSB_V2_Test.ipynb  SSB_V3.ipynb  SSB_V4.ipynb  SSB_V4_Test.ipynb  SSB_V5_Test.ipynb  SSB_V6_Test.ipynb  SSB_V7_Test_2.ipynb  SSB_V7_Test_3.ipynb  code_component_check.py  datamaker_all_numeric.py  dataset_creator.py  scorecard_model.json  ssb.py  ssb.txt
Datasets/: credit_card_default_2.5M.parquet  credit_card_default_categorical.csv  dataset_category_2.py
Experimental_Codes/: SSB_Experimental_V1_Test.ipynb  ssb_experimental.py  ssb_experimental.txt
Experimental_Codes/utils/: universal_data_loader.py
Scores/: scorecard_model_test1.json
package/: pyproject.toml
package/src/: health_check.py  scorecard_model_2026_07_11_17_45_19.json
package/src/segmentiq/: __init__.py  builder.py  scorer.py
package/src/segmentiq/utils/: data_loader.py  undersampler.sql
rapidsegment/: README.md  pyproject.toml
rapidsegment/src/rapidsegment/: __init__.py  builder.py  scorer.py
rapidsegment/src/rapidsegment/utils/: __init__.py  data_loader.py  on_gcp_feature_selection.py
segmentiq/: README.md  pyproject.toml
utils/: undersampler.sql
